feat: improve the swagger
