# internal/api/topics/topic_handler.go
@@ -2,7 +2,6 @@ package topics
 
 import (
 	"net/http"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/liwentao0503/go-api/internal/application"
@@ -14,7 +13,15 @@ type TopicHandler struct {
 	TopicService *application.TopicService `inject:""`
 }
 
-// GetTopic get topic
+// GetTopic godoc
+// @Summary Show an topic
+// @Description get topic by ID
+// @Tags topic
+// @Accept  json
+// @Produce  json
+// @Param topic_id path uint true "topic ID"
+// @Success 200 {object} model.Topic
+// @Router /api/v1/topic/:topic_id [get]
 func (s *TopicHandler) GetTopic(c *gin.Context) {
 	var r application.GetTopicReq
 
@@ -32,7 +39,14 @@ func (s *TopicHandler) GetTopic(c *gin.Context) {
 	utils.JSON(c, http.StatusOK, topic)
 }
 
-// GetAllTopic get all topic
+// GetAllTopic godoc
+// @Summary Show all topic
+// @Description Show all topic
+// @Tags topic
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} model.Topic
+// @Router /api/v1/topic [get]
 func (s *TopicHandler) GetAllTopic(c *gin.Context) {
 	topics, err := s.TopicService.GetAllTopic()
 	if err != nil {
@@ -43,7 +57,15 @@ func (s *TopicHandler) GetAllTopic(c *gin.Context) {
 	utils.JSON(c, http.StatusOK, topics)
 }
 
-// CreateTopic create topic
+// CreateTopic godoc
+// @Summary create an topic
+// @Description create topic
+// @Tags Topic
+// @Accept  json
+// @Produce  json
+// @Param request_data body application.UpsertTopicReq true "topic info"
+// @Success 200 {object} model.Topic
+// @Router /api/v1/topic [post]
 func (s *TopicHandler) CreateTopic(c *gin.Context) {
 	var r application.UpsertTopicReq
 
@@ -60,16 +82,24 @@ func (s *TopicHandler) CreateTopic(c *gin.Context) {
 	utils.JSON(c, http.StatusCreated, nil)
 }
 
-// RemoveTopic remove topic
+// RemoveTopic godoc
+// @Summary remove an topic
+// @Description remove topic by ID
+// @Tags Topic
+// @Accept  json
+// @Produce  json
+// @Param topic_id path uint true "topic ID"
+// @Success 200 {object} model.Topic
+// @Router /api/v1/topic/:topic_id [delete]
 func (s *TopicHandler) RemoveTopic(c *gin.Context) {
-	topicID, err := strconv.Atoi(c.Param("topic_id"))
-	if err != nil {
-		utils.Error(c, http.StatusNotFound, err.Error())
+	var r application.RemoveTopicReq
+
+	if err := c.ShouldBindUri(&r); err != nil {
+		utils.Error(c, http.StatusBadRequest, "param invaild", err)
 		return
 	}
 
-	err = s.TopicService.RemoveTopic(topicID)
-	if err != nil {
+	if err := s.TopicService.RemoveTopic(r.TopicID); err != nil {
 		utils.Error(c, http.StatusInternalServerError, err.Error())
 		return
 	}
@@ -77,9 +107,23 @@ func (s *TopicHandler) RemoveTopic(c *gin.Context) {
 	utils.JSON(c, http.StatusOK, nil)
 }
 
-// UpdateTopic update topic
+// UpdateTopic godoc
+// @Summary update an topic
+// @Description update topic
+// @Tags Topic
+// @Accept  json
+// @Produce  json
+// @Param topic_id path uint true "topic ID"
+// @Param request_data body application.UpsertTopicReq true "topic info"
+// @Success 200 {object} nil
+// @Router /api/v1/topic/:topic_id [post]
 func (s *TopicHandler) UpdateTopic(c *gin.Context) {
 	var r application.UpsertTopicReq
+
+	if err := c.ShouldBindUri(&r); err != nil {
+		utils.Error(c, http.StatusBadRequest, "param invaild", err)
+		return
+	}
 
 	if err := c.ShouldBindJSON(&r); err != nil {
 		utils.Error(c, http.StatusBadRequest, "param invaild", err)
